--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ baseurl:/myBlog
           |   |--2014-01-27-hello-jekyll.md
           |-- _layouts
           |   |-- default.html
+          |   |-- post.html
           |-- index.html
