--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ nav:
     url: https://github.com/anryzhang/myBlog
 
 #theme config
-themes: /themes/violet
+themes: /themes/assets
 
 #配置你喜欢的顶部背景图片
 headimg:
