--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ feed: myBlog/atom.xml
 #菜单配置
 nav:
   - text: 首页
-    url: /index.html
+    url: /myBlog/index.html
   - text: 文章归档
-    url: /archives.html
+    url: /myBlog/archives.html
   - text: 作品
-    url: /works.html
+    url: /myBlog/works.html
   - text: 联系我
     url: http://www.diy1818.com/a/aboutus/index.html
   - text: 博客源代码
