--- a/demo/gulp/package.json
+++ b/demo/gulp/package.json
@@ -16,7 +16,9 @@
     "gulp-rename": "^1.2.2"
   },
   "devDependencies": {
-    "gulp-notify": "^2.2.0"
+    "gulp-less": "^3.0.5",
+    "gulp-notify": "^2.2.0",
+    "gulp-util": "^3.0.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
