--- a/demo/gulp/package.json
+++ b/demo/gulp/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "gulp-less": "^3.0.5",
     "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.1.1",
     "gulp-util": "^3.0.7"
   },
   "scripts": {
