--- a/demo/gulp/package.json
+++ b/demo/gulp/package.json
@@ -5,21 +5,21 @@
   "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
-    "gulp-cache": "^0.4.1",
     "gulp-concat": "^2.6.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.2",
     "gulp-uglify": "^1.5.1",
     "gulp-rename": "^1.2.2"
   },
   "devDependencies": {
-    "gulp-less": "^3.0.5",
-    "gulp-notify": "^2.2.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-group-files": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.3",
     "gulp-sass": "^2.1.1",
-    "gulp-util": "^3.0.7"
+    "gulp-uglify": "^1.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
