--- a/demo/webpack/package.json
+++ b/demo/webpack/package.json
@@ -2,11 +2,26 @@
   "name": "webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build_config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ziyu",
   "license": "ISC",
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "jsx-loader": "^0.13.2",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.13"
+  },
+  "dependencies": {
+    "jquery": "^2.2.0",
+    "react": "^0.14.7"
+  }
 }
