--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ nav:
     url: /myBlog/works.html
   - text: 联系我
     url: http://www.diy1818.com/a/aboutus/index.html
-  - text: 博客源代码
-    url: https://github.com/anryzhang/myBlog
+  - #text: 博客源代码
+    #url: https://github.com/anryzhang/myBlog
 
 #theme config
 themes: /themes/assets
