--- a/demo/webpack_react/package.json
+++ b/demo/webpack_react/package.json
@@ -16,7 +16,9 @@
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
+    "css-loader": "^0.23.1",
     "del": "^2.0.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-base64": "^0.1.3",
@@ -38,9 +40,12 @@
     "gulp-webpack": "^1.5.0",
     "imagemin-pngquant": "^4.2.2",
     "jquery": "^2.2.1",
+    "node-sass": "^3.4.2",
     "object-assign": "^4.0.1",
     "orchestrator": "^0.3.7",
     "react-addons-test-utils": "^0.14.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.3"
   },
   "dependencies": {
