--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/anryzhang/myBlog/issues"
   },
-  "homepage": "https://github.com/anryzhang/myBlog#readme"
+  "homepage": "https://github.com/anryzhang/myBlog#readme",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "consolidate": "^0.14.5",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.3.1",
+    "ejs": "^2.5.7",
+    "express": "^4.15.4",
+    "express-static": "^1.2.4",
+    "jade": "^1.11.0",
+    "mysql": "^2.14.1"
+  }
 }
