--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "<a href=\"http://anryzhang.github.io/myBlog/\" target=\"_blank\" title=\"个人博客\">个人博客</a>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node  app.js ",
+    "dev": "export ISDEV=DEV && webpack && supervisor --debug -w route, app.js app",
+    "build": "webpack &&  node app.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +26,29 @@
     "cookie-session": "^1.3.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-router": "^0.0.1",
     "express-static": "^1.2.4",
     "jade": "^1.11.0",
-    "mysql": "^2.14.1"
+    "jquery": "^3.2.1",
+    "md5": "^2.2.1",
+    "multer": "^1.3.0",
+    "mysql": "^2.14.1",
+    "normalize.css": "^7.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.6",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.0"
   }
 }
