--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node  app.js ",
-    "dev": "export ISDEV=DEV && webpack && supervisor --debug -w route, app.js app",
-    "build": "webpack  &&  node app.js"
+    "dev": "export ISDEV=DEV && webpack   && supervisor --debug -w route, src, app.js app",
+    "build": "webpack -p &&  node app.js"
   },
   "repository": {
     "type": "git",
@@ -37,10 +37,12 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
