--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "myblog",
   "version": "1.0.0",
   "description": "<a href=\"http://anryzhang.github.io/myBlog/\" target=\"_blank\" title=\"个人博客\">个人博客</a>",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node  app.js ",
-    "dev": "export ISDEV=DEV && webpack   && supervisor --debug -w route, src, app.js app",
-    "build": "webpack -p &&  node app.js"
-  },
+  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anryzhang/myBlog.git"
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anryzhang/myBlog/issues"
+  "scripts": {
+    "start": "cross-env NODE_ENV=dev supervisor -w server,app.js -e node,js,html app",
+    "browsersync": "cross-env NODE_ENV=dev node app_browsersync",
+    "build": "webpack",
+    "production": "webpack --config webpack.production.config.js -p & cross-env NODE_ENV=production node app"
   },
   "homepage": "https://github.com/anryzhang/myBlog#readme",
   "dependencies": {
@@ -26,10 +22,6 @@
     "cookie-session": "^1.3.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "express-static": "^1.2.4",
-    "jade": "^1.11.0",
-    "jquery": "^3.2.1",
-    "md5": "^2.2.1",
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "normalize.css": "^7.0.0"
@@ -37,19 +29,24 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
+    "browser-sync": "^2.18.5",
+    "chokidar": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.14",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "node-sass": "^4.5.0",
+    "npm-install-webpack-plugin": "^4.0.5",
+    "reload": "^2.2.2",
     "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.6",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.0"
+    "sass-loader": "^6.0.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.0"
   }
 }
